content/_sass/partials/_users-gallery.scss
.page-gallery {
  h2,
  h4 {
    color: $cwl-red;
  }

  h3,
  h4 {
    @include hide-anchor-symbols;
  }
}

@include media-breakpoint-up(md) {
  .page-gallery {
    h3 .heading__anchor-symbol,
    h4 .heading__anchor-symbol {
      display: inline;
    }
  }
}

.page-gallery {
  .post-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
  }

  @include left-nav;

  .adopter-entry,
  .adopter-row-top,
  .adopter-logo {
    margin: 0 0 12px;
  }

  .adopter-entry {
    display: flex;
    flex-wrap: wrap;
    justify-content: start;
  }

  .adopter-row-top {
    order: 2;
    word-break: break-word;
  }

  .adopter-title {
    font-size: 1.25em;
    margin: 0 0 2px;
  }

  .adopter-link {
    width: 100%;
  }

  .adopter-logo {
    max-height: 150px;
    max-width: 96%;
    object-fit: contain;
    order: 1;
  }
}

@include media-breakpoint-up(md) {
  .page-gallery {
    @include left-nav-md;

    .gallery-content {
      width: calc(100% - 210px);
    }
  }
}

@include media-breakpoint-up(lg) {
  .page-gallery {
    .page-content {
      justify-content: space-between;
    }

    @include left-nav-lg;

    .gallery-content,
    .adopter-entry {
      padding: 0 12px 0 0;
      width: 700px;
    }

    .gallery-content {
      width: calc(100% - 210px);
    }

    .adopter-row-top,
    .adopter-logo {
      order: initial;
    }

    .adopter-row-top {
      margin: 0;
      max-width: initial;
      width: auto;
    }

    .adopter-logo {
      height: 100%;
      margin: 0;
      max-width: 300px;
    }
  }
}

@include media-breakpoint-up(xl) {
  .page-gallery {
    .gallery-content {
      width: calc(100% - 220px);
    }

    .adopter-entry {
      display: flex;
      grid-gap: 0;
      width: auto;
    }

    .adopter-row-top {
      margin: 0 56px 0 0;
      max-width: 560px;
    }

    .adopter-logo-container {
      max-width: 200px;
    }

    .adopter-logo {
      height: 100%;
      max-width: 260px;
    }
  }
}

.adopter-sub-title {
  font-size: 1.25em;
  margin: 0 0 12px;
}

@include media-breakpoint-up(xxl) {
  .page-gallery {
    .site-wrapper > .container {
      margin: 0 auto;
      min-width: 1200px;
    }

    .main {
      margin: 0 auto;
    }

    .post-content {
      justify-content: flex-start;
    }

    h2 {
      margin: 0 0 1.25rem 1rem;
    }

    @include left-nav-xxl;

    .adopter-row-top {
      margin: 0 46px 0 1rem;
      max-width: 760px;
      width: 760px;
    }

    .adopter-sub-title {
      margin: 0 0 12px 1rem;
    }

    .adopter-logo {
      max-width: 290px;
    }

    .adopter-blank-placeholder {
      height: 120px;
    }
  }
}

